# GerenciaServicos

./: BES.html  adaptador.py  app.py  pyproject.toml  requirements.txt  tabela_sigaa.xlsx  turmas_ufrb.csv
